LayoutTests/imported/w3c: [css-flexbox] Only update the intrinsic height if we don't have override height https://bugs.webkit.org/show_bug.cgi?id=215369

Reviewed by Javier Fernandez.

* web-platform-tests/css/css-flexbox/flex-minimum-height-flex-items-010-expected.txt: Replaced failures
by PASS expectations.

Source/WebCore:
[css-flexbox] Only update the intrinsic height if we don't have an override height
https://bugs.webkit.org/show_bug.cgi?id=215369

Reviewed by Javier Fernandez.

If we do have an override height, children will size themselves relative to the override height
(e.g. flexbox flexing/stretching, percentage heights). Because flex intrinsic height is based on
its children, it would then store an incorrect intrinsic height.

This is specially problematic with min-height:auto is nested column flexboxes where flexboxes are
flex items at the same time.

Based on Blink's https://crrev.com/c/1283482 by <cbiesinger@chromium.org>

* rendering/RenderBox.cpp:
(WebCore::RenderBox::cacheIntrinsicContentLogicalHeightForFlexItem const): Early return if there
is an override height.

Canonical link: https://commits.webkit.org/228148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265497 268f45cc-cd09-0410-ab3c-d52691b4dbfc